<resources>
    <string name="app_name">Chat</string>
    <string name="input_username">Input Username</string>
    <string name="login">Login</string>
    <string name="chat_logo">Chat Logo</string>
    <string name="username">Username</string>
    <string name="logout">logout</string>
    <string name="create_new_chat_room">create new Chat Room</string>
    <string name="chat_room_name">Chat room Name</string>
    <string name="chatroom">Chat room</string>
    <string name="return_to_lobby">Return to Lobby</string>
    <string name="options">Options</string>
    <string name="write_message">Aa</string>
    <string name="send_message">Send Message</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="copy">copy</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="choose_people">Choose People</string>
    <string name="search">Search</string>
    <string name="change_title">Change Title</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="leave_chatroom">Leave Conversation</string>
    <string name="error_noMessages">Be the first to chat!</string>
    <string name="deleteRoom_title">Delete Conversation?</string>
    <string name="deleteRoom_message">This conversation will be permanently deleted for everyone!</string>
    <string name="deleteRoom">Conversation deleted</string>
    <string name="error_deleteRoom">Failed to delete Conversation</string>
    <string name="leaveRoom">Left conversation</string>
    <string name="error_leaveRoom">Failed to leave Conversation</string>
    <string name="members">Members</string>
    <string name="add_members">Add Members</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="change_chatroom_title">Chatroom title updated</string>
    <string name="error_change_chatroom_title">Failed to change chatroom title</string>
    <string name="kick_user">kick user</string>
    <string name="message">Message</string>
    <string name="view_profile">View Profile</string>
    <string name="kickMember_title">Kick Member</string>
    <string name="kickMember_message">"Are you sure you want to kick "</string>
    <string name="kickMember">" was kicked from this conversation"</string>
    <string name="error_kickMember">Failed to kick member</string>

</resources>