<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatLobbyActivity">

    <Toolbar
        android:id="@+id/lobby_toolbar"
        style="@style/StandardToolbar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_logout"
            android:scaleType="fitXY"
            android:background="transparent"
            android:contentDescription="@string/logout"
            android:onClick="logoutUser"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StandardTextLight"
            android:text="@string/username"
            android:layout_gravity="center"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_new_chat"
            android:scaleType="fitXY"
            android:background="transparent"
            android:contentDescription="@string/create_new_chat_room"
            android:onClick="newChatRoom"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"/>

    </Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/lobby_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>