<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity">

    <Toolbar
        android:id="@+id/room_toolbar"
        style="@style/StandardToolbar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_arrow"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:contentDescription="@string/return_to_lobby"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:onClick="returnToLobby"/>

        <TextView
            android:id="@+id/room_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StandardTextLight"
            android:text="@string/chatroom"
            android:layout_gravity="center"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_menu"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:contentDescription="@string/options"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:onClick="openOptions"/>

    </Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/room_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/room_toolbar"
        app:layout_constraintBottom_toTopOf="@id/room_bottomToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="sendMessage"/>

    <Toolbar
        android:id="@+id/room_bottomToolbar"
        style="@style/BottomToolBar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <EditText
                android:id="@+id/room_writeMessage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/room_sendButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/write_message"
                android:autofillHints=""
                android:inputType="text" />

            <ImageButton
                android:id="@+id/room_sendButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintDimensionRatio="1:1"
                android:src="@drawable/ic_send"
                android:background="@android:color/transparent"
                android:tint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/send_message"
                android:onClick="sendMessage"/>

            <ProgressBar
                android:id="@+id/room_sendLoading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="8dp"
                android:indeterminateTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/room_sendButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>