<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_chatroom_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/off_white">

    <ImageView
        android:id="@+id/item_chatroom_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_chat"
        android:tint="@color/colorPrimary"
        android:contentDescription="@string/chatroom" />

    <TextView
        android:id="@+id/item_chatroom_name"
        style="@style/StandardTextDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:gravity="center|start"
        app:layout_constraintStart_toEndOf="@id/item_chatroom_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_chatroom_enter"
        android:text="@string/chat_room_name"/>

    <TextView
        android:id="@+id/item_chatroom_timestamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_stamp"
        android:textSize="12sp"
        android:layout_marginHorizontal="8dp"
        android:gravity="center|start"
        app:layout_constraintStart_toEndOf="@id/item_chatroom_image"
        app:layout_constraintTop_toBottomOf="@id/item_chatroom_name"
        app:layout_constraintEnd_toStartOf="@id/item_chatroom_enter"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/item_chatroom_enter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_forward_arrow"
        android:tint="@color/colorPrimaryDark"
        android:contentDescription="@string/chatroom"/>

</androidx.constraintlayout.widget.ConstraintLayout>