<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/room_drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="end">

    <!-- Main Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@id/room_toolbar"
            style="@style/StandardToolbar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back_arrow"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:contentDescription="@string/return_to_lobby"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:onClick="returnToLobby"/>

            <TextView
                android:id="@id/room_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/StandardTextLight"
                android:text="@string/chatroom"
                android:layout_gravity="center"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_menu"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:contentDescription="@string/options"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:onClick="openOptions"/>

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@id/room_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <!-- Navigation View Layout -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/groupChat_navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/groupchat_nav_options"/>

</androidx.drawerlayout.widget.DrawerLayout>