<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewChatroomActivity"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newChat_toolbar"
        style="@style/StandardToolbar"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_arrow"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout"
            android:onClick="returnToLobby"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StandardTextLight"
            android:text="@string/choose_people"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/newChat_okButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_check"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout"
            android:onClick="createNewChatroom"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newChat_searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/newChat_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/newChat_searchUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newChat_searchButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/search"
            android:autofillHints=""
            android:inputType="text" />

        <ImageButton
            android:id="@+id/newChat_searchButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_search"
            android:background="@android:color/transparent"
            android:tint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/newChat_searchUser"
            android:contentDescription="@string/send_message"
            android:onClick="searchUser"/>

        <ProgressBar
            android:id="@+id/room_sendLoading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            android:indeterminateTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/newChat_searchButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newChat_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/newChat_searchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>